Incorporate metrics into the striff generation process (#25)
* Incorporate metrics in striff generation process

* test

* Misc change

* Incorporate metrics generation into striff operation

* Ignore ssl certs in maven build

* Checkstyle fixes

* Checkstyle fixes

* Fix up tests

* Display metrics on diagrams

* Improve relationships passing to diagram

* Finished metrics implementation

* Remove gephi dep

* Remove gephi dep

* Remove gephi dep

* Remove gephi dep

* Remove gephi dep

---------

Co-authored-by: Muntazir Fadhel <mfadhel@hadii.ca>